2일차 - android : vscode 로 Dart 프로젝트 만들기

--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ out/
 .settings
 .springBeans
 .sts4-cache
-bin/
+# bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
@@ -27,7 +27,7 @@ bin/
 .settings
 .springBeans
 .sts4-cache
-bin/
+# bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
 
@@ -74,7 +74,7 @@ build/
 *.zip
 
 
-# Miscellaneous
+### Flutter 설정 ###
 !**/*.class
 !**/*.log
 !**/*.pyc
